[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"
authors = ["assert0 <assert0@github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"
lazy_static = "1.4.0"
convolve2d = "0.1.0"
counter = "0.5.7"
lcmx = "0.1.3"
rusttype = "0.9.3"
